Add missing dependency for control-server in install_manifest.json

--- a/install_manifest.json
+++ b/install_manifest.json
@@ -58,6 +58,10 @@
         "airlock": [
             "system",
             "core"
+        ],
+        "control-server": [
+            "system",
+            "core"
         ]
     },
     "sizes": {
